# pkgx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
addons/: FindZstd.cmake
src/: README.md  common.hxx  main.cxx  main.hxx  verbosity.hxx
src/format/: base.hxx  structures.hxx
src/helpers/: terminal.hxx
src/utils/: builder.cxx  builder.hxx  compact_archive.cxx  compact_archive.hxx  extractor.cxx  extractor.hxx  reader.cxx  reader.hxx  universal.cxx  universal.hxx
